classDiagram
    class IVehiculoBuilder {
        <<interface>>
        +setMotor(tipo: string) this
        +setAsientos(cantidad: number) this
        +setGps() this
        +setComputadoraDeBordo() this
    }

    class CocheBuilder {
        -coche: Coche
        +setMotor(tipo: string) this
        +setAsientos(cantidad: number) this
        +setGps() this
        +setComputadoraDeBordo() this
        +obtenerCoche() Coche
    }

    class ManualBuilder {
        -manual: ManualDeCoche
        +setMotor(tipo: string) this
        +setAsientos(cantidad: number) this
        +setGps() this
        +setComputadoraDeBordo() this
        +obtenerManual() ManualDeCoche
    }

    class Coche {
        +motor: string
        +asientos: number
        +gps: boolean
        +computadoraDeBordo: boolean
        +describir() void
    }

    class ManualDeCoche {
        +descripcionMotor: string
        +descripcionAsientos: string
        +instruccionesGps: string
        +instruccionesComputadora: string
        +describir() void
    }

    class DirectorDeVehiculos {
        +construirCocheSuperDeportivo(builder: IVehiculoBuilder) void
        +construirCocheFamiliar(builder: IVehiculoBuilder) void
    }

    class Cliente_Main {
        <<Client>>
    }

    IVehiculoBuilder <|.. CocheBuilder
    IVehiculoBuilder <|.. ManualBuilder

    CocheBuilder *--> Coche
    ManualBuilder *--> ManualDeCoche

    DirectorDeVehiculos --> IVehiculoBuilder

    Cliente_Main ..> DirectorDeVehiculos
    Cliente_Main ..> CocheBuilder
    Cliente_Main ..> ManualBuilder
    Cliente_Main ..> Coche
    Cliente_Main ..> ManualDeCoche